﻿RELEASE HISTORY

08/06/2015 1.00 beta rev 492
    - Added customizable wallpapers to control groups
    - Fixed group separator add/remove bug

01/06/2015 1.00 beta rev 491-p1
    - Fix to minor issues of the new UI

31/05/2015 1.00 beta rev 491-git1
    - Fixed issue #134 (cost per unit not saved)
    - Improved Sensor widget (PR #174)

30/05/2015 1.00 beta rev 491
    - Restyled UI navigation. Added side menu (opens by clicking the upper left HomeGenie button)
    - Improved Switch and Shutter widgets (PR #172 #173)
    - Fixed Statistics Engine bug with parsing/passing wrong timerange values

27/05/2015 1.00 beta rev 489
    - Fixed CSharp app compile bug (Windows)

10/05/2015 1.00 beta rev 484-git9 (r488 preview)
    - Added localization of programs configuration options

09/05/2015 1.00 beta rev 484-git8
    - Added localization of module features and programs title/description
    - Added postback call to automation programs when a module option/feature is changed from the UI

08/05/2015 1.00 beta rev 484-git7 (487 preview)
    - Added missing locale translation entries to locale files
    - Added Cron event wizard and cron event input widget available as AddFeature "cron.text" field type

05/05/2015 1.00 beta rev 484-git6
    - Added confirm popup for "database reset" and "remote routing reset"
    - Updated automation programs to use new Program.AddFeature widgets
    - Added UI widgets for fields created with Program.AddFeature (last method parameter is the type: "text", "slider", "password", "checkbox", "module.text", "store.script", "store.list")
    - Added simple store to Module helper too
    - Added simple key/value persistent store to Program helper class: Program.Store("<store_name>")[.Get("<item_key>") | .Remove("<item_key>") | .List]
    - Fixed encoding bug in input text of module features and program config options (not handling properly double quotes and other characters)
    - Added "Description" field to MIGServiceConfiguration.Interface