@@ -13,6 +13,7 @@
 Raphael.colorwheel = function(target, color_wheel_size, no_segments){
   var canvas,
       current_color,
+      current_color_hsb,
       size,
       segments = no_segments || 60,
       bs_square = {},
@@ -64,7 +65,8 @@ Raphael.colorwheel = function(target, color_wheel_size, no_segments){
       input: input,
       onchange: onchange,
       ondrag : ondrag,
-      color : public_set_color
+      color : public_set_color,
+      color_hsb : public_set_color_hsb
     };
   }
 
@@ -78,7 +80,7 @@ Raphael.colorwheel = function(target, color_wheel_size, no_segments){
       if(this.value.match(/^#([0-9A-F]){3}$|^#([0-9A-F]){6}$/img)){
         set_color(this.value);
         update_color(true);
-		run_onchange_event();
+        run_onchange_event();
       }
     });
     set_color(target.value);
@@ -181,16 +183,39 @@ Raphael.colorwheel = function(target, color_wheel_size, no_segments){
   }
 
   function public_set_color(value){
-    var ret = set_color(value);
+    var ret = set_color(value, false);
     update_color(false);
     return ret;
   }
 
-  function set_color(value){
-    if(value === undefined){ return current_color; }
+  function public_set_color_hsb(hsb){
+    var ret = set_color(hsb, true);
+    update_color(false);
+    return ret;
+  }
 
-    var temp = canvas.rect(1,1,1,1).attr({fill:value}),
-        hsb = canvas.raphael.rgb2hsb(temp.attr("fill"));
+  function set_color(value, is_hsb){
+    if(value === undefined){
+        if(is_hsb){
+            return current_color_hsb;
+        } else {
+            return current_color;
+        }
+    }
+
+    var hsb, hex;
+    if(is_hsb){
+        hsb = value;
+        // Allow v (value) instead of b (brightness), as v is sometimes
+        // used by Raphael.
+        if(hsb.b === undefined){ hsb.b = hsb.v; }
+        var rgb = canvas.raphael.hsb2rgb(hsb.h, hsb.s, hsb.b);
+        hex = rgb.hex;
+    } else {
+        hex = value;
+        hsb = canvas.raphael.rgb2hsb(hex);
+    }
+    var temp = canvas.rect(1,1,1,1).attr({fill:hex});
 
     set_bs_cursor(
       (0-sdim.l/2) + (sdim.l*hsb.s),
@@ -210,6 +235,7 @@ Raphael.colorwheel = function(target, color_wheel_size, no_segments){
           h: hue()
         };
 
+    current_color_hsb = hsb;
     current_color = Raphael.hsb2rgb(hsb.h, hsb.s,hsb.b);
 
     if(input_target){
