@@ -3,6 +3,7 @@
 08/06/2015 1.00 beta rev 492
     - Added customizable wallpapers to control groups
     - Fixed group separator add/remove bug
+    - Fixed colorlight widget rgb/hsb color conversion bug
 
 01/06/2015 1.00 beta rev 491-p1
     - Fix to minor issues of the new UI
